@@ -1,3 +1,13 @@
+2003-03-16
+  Added win32.html last week.
+  Incoporating suggested changes from Kenny Tilton and Edi Weitz.
+  Maintaining CHANGELOG. Including Paul Tarvydas and Kenny Tilton
+  as contributors. Provided an introduction to Paul Tarvydas's code.
+  Changed link to Petzold's book. Changed wm-close to wm_close, 
+  making the move from Petzold to the Lisp code a slightly more 
+  seamless. A few stylistic changes. Included :dbcs decision made
+  at run time, not compile time.	
+
 2002-12-26
   Fixed some typos in misc.html, license.html, and in this file
 
